fix(docs): fixed swagger annotation for delete method
